--- a/assignment/src/app/components/login/login.component.html
+++ b/assignment/src/app/components/login/login.component.html
@@ -1,11 +1,12 @@
- 
+ <div style="margin-left: 550px;">
     <h2>Login</h2>
 
-    <form [formGroup]="loginForm" (ngSubmit)="CheckUser()">
+    <form #f="ngForm" [formGroup]="loginForm" (ngSubmit)="CheckUser(f)">
         
         Username: 
     <input type="text" id="username" name="username" formControlName="username"/>
     <br/>
+    <br>
     Password:
     <input type="password" id="password" name="password" formControlName="password"/>
     <br/>
@@ -14,4 +15,4 @@
     <button type="submit">Login</button>
 </div>
 </form>
-
+</div>
